[gd_scene load_steps=10 format=3 uid="uid://c04v0qws1elcq"]

[ext_resource type="Script" path="res://fork_lift.gd" id="1_n7x8g"]
[ext_resource type="ArrayMesh" uid="uid://bk78qtjwf763y" path="res://lift_body.res" id="2_f628i"]
[ext_resource type="AudioStream" uid="uid://d1b4rnp8jtefe" path="res://assets/446123__justinvoke__engine-3.mp3" id="2_iev54"]
[ext_resource type="AudioStream" uid="uid://bhq86nav6g3k0" path="res://assets/Reverse car sound.mp3" id="3_6ok41"]
[ext_resource type="ArrayMesh" uid="uid://67f250uujr7g" path="res://wheel.res" id="3_ji15g"]
[ext_resource type="ArrayMesh" uid="uid://c7jqkbiyrgakp" path="res://lift_prong.res" id="3_mojqt"]

[sub_resource type="ConvexPolygonShape3D" id="ConvexPolygonShape3D_fccod"]
points = PackedVector3Array(-0.5, -0.985196, -0.985196, 0.5, 0.954308, 0.954308, 0.5, 0.954308, -0.954308, -0.5, 0.985196, 0.985196, 0.5, -0.954494, 0.954494, -0.5, 0.985196, -0.985196, -0.5, -0.985196, 0.985196, 0.5, -0.954494, -0.954494)

[sub_resource type="BoxShape3D" id="BoxShape3D_cv5k8"]
size = Vector3(0.4, 0.001, 1.5)

[sub_resource type="BoxShape3D" id="BoxShape3D_n5osg"]
size = Vector3(0.4, 0.001, 1.5)

[node name="fork_lift" type="VehicleBody3D"]
collision_layer = 5
collision_mask = 5
mass = 60.0
center_of_mass_mode = 1
center_of_mass = Vector3(0, 0.4, 0)
script = ExtResource("1_n7x8g")

[node name="body" type="MeshInstance3D" parent="."]
transform = Transform3D(-3.93403e-08, -0.5, 2.18557e-08, 0, -2.18557e-08, -0.5, 0.9, -2.18557e-08, 9.55343e-16, 0.50458, 1.11625, -0.160787)
mesh = ExtResource("2_f628i")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.75, 0.1)
shape = SubResource("ConvexPolygonShape3D_fccod")

[node name="front_right" type="VehicleWheel3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.82, 0, 0.575)
brake = 1.0
use_as_traction = true
wheel_roll_influence = 0.05
suspension_travel = 0.05
suspension_stiffness = 200.0
metadata/_edit_group_ = true

[node name="MeshInstance3D" type="MeshInstance3D" parent="front_right"]
transform = Transform3D(2.18557e-08, 1, -4.37114e-08, 0.5, -4.37114e-08, 0, -1.91069e-15, -8.74228e-08, -0.5, 0, 0, 0)
mesh = ExtResource("3_ji15g")

[node name="back_right" type="VehicleWheel3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.82, -0.25, -0.62)
brake = 1.0
use_as_steering = true
wheel_roll_influence = 0.05
wheel_radius = 0.25
suspension_travel = 0.05
suspension_stiffness = 200.0
metadata/_edit_group_ = true

[node name="MeshInstance3D" type="MeshInstance3D" parent="back_right"]
transform = Transform3D(1.09278e-08, 1, -2.18557e-08, 0.25, -4.37114e-08, 0, -9.55343e-16, -8.74228e-08, -0.25, 0, 0, 0)
mesh = ExtResource("3_ji15g")

[node name="front_left" type="VehicleWheel3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.5, 0, 0, 0, 0.5, 0.82, 0, 0.575)
brake = 1.0
use_as_traction = true
wheel_roll_influence = 0.05
suspension_travel = 0.05
suspension_stiffness = 200.0
metadata/_edit_group_ = true

[node name="MeshInstance3D" type="MeshInstance3D" parent="front_left"]
transform = Transform3D(-2.18557e-08, -1, 0, 0.5, -4.37114e-08, 0, 0, 0, 0.5, 0, 0, 0)
mesh = ExtResource("3_ji15g")

[node name="back_left" type="VehicleWheel3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.82, -0.25, -0.62)
brake = 1.0
use_as_steering = true
wheel_roll_influence = 0.05
wheel_radius = 0.25
suspension_travel = 0.05
suspension_stiffness = 200.0
metadata/_edit_group_ = true

[node name="MeshInstance3D" type="MeshInstance3D" parent="back_left"]
transform = Transform3D(-1.09278e-08, -1, 0, 0.25, -4.37114e-08, 0, 0, 0, 0.25, 0, 0, 0)
mesh = ExtResource("3_ji15g")

[node name="lift1" type="MeshInstance3D" parent="."]
transform = Transform3D(0.7, 0, 0, 0, 1, 0, 0, 0, 0.5, -0.29, 0, 1.9)
mesh = ExtResource("3_mojqt")

[node name="lift2" type="MeshInstance3D" parent="."]
transform = Transform3D(0.7, 0, 0, 0, 1, 0, 0, 0, 0.5, 0.29, 0, 1.9)
mesh = ExtResource("3_mojqt")

[node name="lift1_hitbox" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.29, 0, 1.9)
shape = SubResource("BoxShape3D_cv5k8")

[node name="lift2_hitbox" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.29, 0, 1.9)
shape = SubResource("BoxShape3D_n5osg")

[node name="horizontal_pivot" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.923926, -0.382571, 0, 0.382571, 0.923926, 0, 0, 0)

[node name="vertical_pivot" type="Node3D" parent="horizontal_pivot"]

[node name="Camera3D" type="Camera3D" parent="horizontal_pivot/vertical_pivot"]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 0.801, -5.333)

[node name="engine_sound" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("2_iev54")
volume_db = -20.0
max_db = 0.1

[node name="reverse_sound" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("3_6ok41")
max_db = 1.0
